# bleink

./: .gitignore  CMakeLists.txt  README.md  prj.conf  xiao_ble.overlay
include/: battery.c  battery.h  ble_ess_service.c  ble_ess_service.h  ble_rgb_service.c  ble_rgb_service.h  display_epaper.h  display_epaper_cfb.c  icons.h
src/: main.c
